tests/ui/derive/fail_validate_unreachable_struct_message_rule.rs
#[derive(foundry::Validate)]
#[validate(messages(email(min = "Email is too short.")))]
struct UnreachableStructMessageRule {
    #[validate(required)]
    email: String,
}

fn main() {}
